--- a/widget/res/layout/db_list.xml
+++ b/widget/res/layout/db_list.xml
@@ -33,7 +33,7 @@
         <Button android:id="@+id/internet_button"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="Internet"
+                android:text="Internet(HTTP 通信)"
                 />
     </LinearLayout>
 </ScrollView>
