--- a/widget/res/layout/edit_view.xml
+++ b/widget/res/layout/edit_view.xml
@@ -6,7 +6,7 @@
     <EditText android:id="@+id/edit_view"
               android:layout_height="wrap_content"
               android:layout_width="fill_parent"
-              android:text="这里可以输入文字"
+              android:hint="这里可以输入文字"
               />
     <Button android:id="@+id/edit_view_button"
             android:layout_width="wrap_content"
