--- a/widget/res/layout/main.xml
+++ b/widget/res/layout/main.xml
@@ -39,6 +39,12 @@
                 android:text="图片切换：Image Switch Gallery"
                 />
 
+        <Button android:id="@+id/image_small_enlarge"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="大图片拖拽、缩放效果"
+                />
+
         <Button  android:id="@+id/button1"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
