--- a/db/res/layout/main.xml
+++ b/db/res/layout/main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-        >
-    <TextView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, MyActivity"
-            />
-</LinearLayout>
+            android:layout_height="fill_parent">
+    <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            >
+        <Button android:id="@+id/db_page_button"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="安卓五种数据存储方式"
+                />
+    </LinearLayout>
+</ScrollView>
 
