--- a/widget/res/layout/layout_advance.xml
+++ b/widget/res/layout/layout_advance.xml
@@ -27,10 +27,10 @@
                 android:layout_width="wrap_content"
                 android:text="自定义底部导航栏"
                 />
-        <Button android:id="@+id/page_cut_over"
+        <Button android:id="@+id/page_cut_over_button"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="页面切换动画"
+                android:text="页面左右滑动切换（ViewFlipper实现）"
                 />
 
 
