--- a/widget/res/layout/view_flipper.xml
+++ b/widget/res/layout/view_flipper.xml
@@ -9,18 +9,23 @@
                           android:layout_height="fill_parent">
 
                  <LinearLayout android:layout_width="fill_parent" android:gravity="center" android:layout_height="fill_parent">
-                     <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                     <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
                                 android:scaleType="fitXY" android:src="@drawable/scenery1"/>
                  </LinearLayout>
 
                  <LinearLayout android:layout_width="fill_parent" android:gravity="center" android:layout_height="fill_parent">
-                     <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                     <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
                                 android:scaleType="fitXY" android:src="@drawable/scenery2"/>
                  </LinearLayout>
 
                  <LinearLayout android:layout_width="fill_parent" android:gravity="center" android:layout_height="fill_parent">
-                     <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
-                                android:scaleType="fitXY" android:src="@drawable/scenery3"/>
+                     <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
+                         <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
+                                    android:id="@+id/view_flipper_image_scenery3" android:scaleType="fitXY" android:src="@drawable/scenery3"/>
+                         <Button android:id="@+id/view_flipper_button"  android:layout_height="wrap_content" android:layout_width="wrap_content"
+                                 android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="20dip"
+                                 android:background="@drawable/shape" android:text="立即体验"/>
+                     </RelativeLayout>
                  </LinearLayout>
 
              </ViewFlipper>
