--- a/widget/res/layout/head.xml
+++ b/widget/res/layout/head.xml
@@ -5,7 +5,7 @@
               android:orientation="horizontal"
               android:layout_gravity="center_vertical">
     <ImageView
-            android:src="@drawable/money_note"
+            android:src="@drawable/icon"
             android:contentDescription="记账本"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
