--- a/widget/res/layout/view_flipper.xml
+++ b/widget/res/layout/view_flipper.xml
@@ -10,28 +10,30 @@
                           android:layout_height="fill_parent">
              </ViewFlipper>
 
+
+             <!--页面下方的白色导航点-->
              <LinearLayout   android:orientation="horizontal"
                              android:layout_width="wrap_content"
                              android:layout_gravity="bottom|center_horizontal"
                              android:layout_height="wrap_content">
 
-                             <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                        android:scaleType="fitXY" android:id="@+id/view_flipper_image_scenery1" android:src="@drawable/da"/>
+                             <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                        android:id="@+id/view_flipper_point_scenery1" android:src="@drawable/da"/>
 
-                             <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                        android:scaleType="fitXY" android:id="@+id/view_flipper_image_scenery2" android:src="@drawable/xiao"/>
+                             <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                        android:id="@+id/view_flipper_point_scenery2" android:src="@drawable/xiao"/>
 
-                             <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                                android:scaleType="fitXY" android:id="@+id/view_flipper_image_scenery3" android:src="@drawable/xiao"/>
+                             <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                          android:id="@+id/view_flipper_point_scenery3" android:src="@drawable/xiao"/>
 
-                             <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                        android:scaleType="fitXY" android:id="@+id/view_flipper_image_scenery4" android:src="@drawable/xiao"/>
+                             <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                        android:id="@+id/view_flipper_point_scenery4" android:src="@drawable/xiao"/>
 
-                             <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                        android:scaleType="fitXY" android:id="@+id/view_flipper_image_scenery5" android:src="@drawable/xiao"/>
+                             <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                         android:id="@+id/view_flipper_point_scenery5" android:src="@drawable/xiao"/>
 
-                            <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_gravity="center"
-                                       android:id="@+id/view_flipper_image_scenery6" android:scaleType="fitXY" android:src="@drawable/xiao"/>
-
+                            <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center"
+                                       android:id="@+id/view_flipper_point_scenery6" android:src="@drawable/xiao"/>
              </LinearLayout>
+
 </FrameLayout>
