--- a/db/res/layout/db_list.xml
+++ b/db/res/layout/db_list.xml
@@ -28,7 +28,7 @@
         <Button android:id="@+id/content_provider_button"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="ContentProvider"
+                android:text="ContentProvider(获取通讯录信息)"
                 />
         <Button android:id="@+id/internet_button"
                 android:layout_height="wrap_content"
