--- a/advance/res/layout/main.xml
+++ b/advance/res/layout/main.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
             >
+    <LinearLayout android:layout_height="fill_parent"
+                  android:layout_width="fill_parent">
         <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello World, MyActivity,各种小功能在安卓里面的实现....."
+                android:text="Hello World, MyActivity"
                 />
-        <Button android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:text=""/>
+        <Button android:id="@+id/load_picture_button"
+                 android:layout_height="wrap_content"
+                 android:layout_width="fill_parent"
+                 android:text="加载图片的三级缓存策略(内存、文件、网络)"/>
     </LinearLayout>
+</ScrollView>
 
 
