--- a/advance/res/layout/main.xml
+++ b/advance/res/layout/main.xml
@@ -6,12 +6,18 @@
                   android:layout_height="fill_parent"
             >
     <LinearLayout android:layout_height="fill_parent"
-                  android:layout_width="fill_parent">
+                  android:layout_width="fill_parent"
+            android:orientation="vertical">
         <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Hello World, MyActivity"
                 />
+        <Button android:id="@+id/list_view_load_picture"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                />
+
         <Button android:id="@+id/load_picture_button"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
