--- a/widget/res/layout/android_core.xml
+++ b/widget/res/layout/android_core.xml
@@ -19,4 +19,9 @@
             android:id="@+id/core_intent_service"
             android:text="Intent(与Service交互)"
             />
+    <Button android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:id="@+id/start_methods_for_activity_button"
+        android:text="Activity的4种启动方式(很重要)"
+        />
 </LinearLayout>
