--- a/widget/res/layout/main.xml
+++ b/widget/res/layout/main.xml
@@ -78,5 +78,11 @@
                 android:layout_width="fill_parent"
                 android:text="android核心"
                 />
+        <Button android:id="@+id/to_login_page_button"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="@string/login"/>
+
+
     </LinearLayout>
 </ScrollView>
