complete four starting methods for activity

--- a/widget/res/layout/android_core.xml
+++ b/widget/res/layout/android_core.xml
@@ -22,6 +22,6 @@
     <Button android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:id="@+id/start_methods_for_activity_button"
-        android:text="Activity的4种启动方式(很重要)"
+        android:text="Activity的4种启动方式(原理解析)"
         />
 </LinearLayout>
