--- a/widget/res/layout/start_method_for_activity.xml
+++ b/widget/res/layout/start_method_for_activity.xml
@@ -1,29 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="Activity的4种启动方式：Standard, singleTop, singleTask和singleInstance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/standard_button"
-        android:text="Standard(默认)"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/singleTop_button"
-        android:text="singleTop"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/singleTask_button"
-        android:text="singleTask"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/singleInstance_button"
-        android:text="singleInstance"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:text="Activity的4种启动方式：Standard, singleTop, singleTask和singleInstance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/standard_button"
+            android:text="Standard(默认)"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/singleTop_button"
+            android:text="singleTop(应用间共享)"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/singleTask_button"
+            android:text="singleTask"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/singleInstance_button"
+            android:text="singleInstance(手机系统内单例，应用间共享)"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/task_stack_text"
+            android:layout_width="fill_parent"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/taskStackImage"
+            android:layout_width="280dp"
+            android:layout_height="380dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/task_stack"
+            />
+    </LinearLayout>
+
+</ScrollView>
