--- a/widget/res/layout/activity_life.xml
+++ b/widget/res/layout/activity_life.xml
@@ -2,5 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="这是ActivityLife主页面"
+        />
+    <Button
+        android:id="@+id/activity_life_button_1"
+        android:text="跳转到第一个页面?"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
